ingress/ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pluto
  name: pluto
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pluto
  strategy: {}
  template:
    metadata:
      labels:
        app: pluto
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
        resources: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pluto
  name: pluto-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: pluto

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pluto-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: rakshith.com
    http:
      paths:
      - backend:
          service:
            name: pluto-svc
            port:
              number: 80
        path: /pluto-app
        pathType: Prefix

# k create ingress pluto-ingress --rule=rakshith.com/pluto-app*=pluto-svc:80 --class nginx -o yaml
